Add VM args + Split table in three smaller tables